--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
     "react-native-appearance": "^0.3.4",
+    "react-native-haptic-feedback": "^1.13.0",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-paper": "^4.9.2",
