--- a/mobile/package.json
+++ b/mobile/package.json
@@ -48,6 +48,7 @@
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-paper": "^4.9.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-shadow": "^1.2.2",
     "react-native-siri-shortcut": "^1.9.2",
     "react-native-svg": "^12.1.0",
