--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-firebase/app": "^13.0.1",
     "base-64": "^1.0.0",
