force light mode on ios

--- a/mobile/ios/CompanionKit/Info-template.plist
+++ b/mobile/ios/CompanionKit/Info-template.plist
@@ -81,5 +81,7 @@
 	<key>NSUserActivityTypes</key>
 	<array>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
