--- a/mobile/package.json
+++ b/mobile/package.json
@@ -58,6 +58,7 @@
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.2.0",
     "simplex-noise": "3.0.0",
     "three": "^0.125.0"
   },
@@ -71,6 +72,7 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/jest": "^27.0.2",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-video": "^5.0.12",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
