Add app logos and change app name to PolarUs

--- a/.env-starter
+++ b/.env-starter
@@ -40,7 +40,7 @@ EMAIL_FROM_ADDRESS=                          address that email is sent from
 EMAIL_ADMIN_EMAIL=                           SendGrid admin email
 
 DASHBOARD_CLIENT_INVITATION_LINK=            Invite magic link url                          e.g. https://project.page.link/magic
-DASHBOARD_URL=                               Hosting URL for dashboard                      e.g. https://bipolarbridges.web.app
+DASHBOARD_URL=                               Hosting URL for dashboard                      e.g. https://polarus-app.web.app
 CLIENT_INVITE_PERIOD=DEFAULT                 Invite cool-down setting.                      Must be DEFAULT or TEST
 
 CLIENT_SETTINGS_TYPE_IOS=                                                                   e.g. com.company.ios
