--- a/mobile/app-template.json
+++ b/mobile/app-template.json
@@ -1,6 +1,6 @@
 {
   "name": "CompanionKit",
-  "displayName": "CompanionKit",
+  "displayName": "PolarUs",
   "slug": "companionkit",
   "privacy": "unlisted",
   "platforms": [
