--- a/mobile/package.json
+++ b/mobile/package.json
@@ -53,6 +53,7 @@
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-paper": "^4.9.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
